# ObjectRecognition_Wheelchair

pcl_workspace/curr_ex/: CMakeCache.txt  Makefile  cloud1_ds.pcd  cmake_install.cmake  correspondence_grouping.cpp  correspondence_grouping.cpp~  model1.pcd  model_face.pcd  model_face_ds.pcd  model_face_tilt.pcd  model_face_tilt.pcd~  model_kettle_ds.pcd  model_phone.pcd  model_xbox_ds.pcd  scene_ds.pcd
pcl_workspace/grabber/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  grabber  grabber.cpp  grabber.cpp~
pcl_workspace/vox/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  model_chair_ds.pcd  model_hphone.pcd  model_hphone_ds.pcd  model_kettle.pcd  vox  vox.cpp  vox.cpp~
pcl_workspace/wheelchair_objectDetection/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cloud_ds.pcd  cmake_install.cmake  correspondence_grouping  model_chair.pcd  model_chair_ds.pcd  model_ds.pcd  scene_ds.pcd  wheelchair_obj  wheelchair_obj.cpp  wheelchair_obj.cpp~
